ci: switch to pages deployment and include resources

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,6 +1,11 @@
 project:
   type: website
   output-dir: _site
+  resources:
+    - styles.css
+    - preview.js
+    - images/
+
 
 website:
   title: "Your Name"
