--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
   resources:
     - styles.css
     - preview.js
-    - d3-viz.js
+    - gradient_descent.html
     - images/
 
 
@@ -16,11 +16,8 @@ format:
   html:
     theme: none
     css: styles.css
-    include-in-header:
-      - text: '<script src="https://d3js.org/d3.v7.min.js"></script>'
     include-after-body: 
       - preview.js
-      - d3-viz.js
     minimal: true
 
 # Default: execute code and cache/freeze outputs locally.
